--- a/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
+++ b/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
@@ -43,25 +43,8 @@
                               <Component id="jLabel1" min="-2" pref="89" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-                                      <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel1" min="-2" pref="89" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                                  <Component id="btn_add_new_city" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="btn_back_button" alignment="0" max="32767" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                              <Component id="btnDeleteCity" linkSize="1" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="txt_city_Name" min="-2" pref="229" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
+                                  <Component id="txt_city_Name" min="-2" pref="216" max="-2" attributes="0"/>
+                                  <Component id="btn_add_new_city" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
