--- a/src/userinterface/DoctorRole/DoctorWorkAreaJPanel.form
+++ b/src/userinterface/DoctorRole/DoctorWorkAreaJPanel.form
@@ -181,7 +181,7 @@
                 <Column editable="false" title="Message by Doctor" type="java.lang.Object"/>
                 <Column editable="false" title="Lab Assistant" type="java.lang.String"/>
                 <Column editable="false" title="Status" type="java.lang.String"/>
-                <Column editable="false" title="Result" type="java.lang.String"/>
+                <Column editable="false" title="Therapy" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
