--- a/src/userinterface/DonorRole/DonorRegistrationJPanel.form
+++ b/src/userinterface/DonorRole/DonorRegistrationJPanel.form
@@ -177,10 +177,12 @@
                           <Component id="organToDonateJComboBox" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="radOrganAvailableNowYes" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="radOrganAvailableNo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lblOrganAvailable" alignment="0" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="radOrganAvailableNowYes" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="radOrganAvailableNo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="lblPOCTitle" min="-2" max="-2" attributes="0"/>
