--- a/src/userinterface/CreateAdmin/ManageOrgan.form
+++ b/src/userinterface/CreateAdmin/ManageOrgan.form
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -60,10 +65,12 @@
               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Component id="tblPatientData" min="-2" pref="122" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="cmbxfacilityProcurement" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
-                  <Component id="btnAssignRequest" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                  <Component id="btnProcureOrgan" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btnAssignRequest" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                      <Component id="btnProcureOrgan" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
               <Component id="lblMatch" min="-2" max="-2" attributes="0"/>
